// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`openApiPyClientGenerator - arrays > should handle dictionary (additionalProperties) responses > client_gen.py 1`] = `
""""TestApi — AUTO-GENERATED synchronous client."""

from __future__ import annotations

import datetime
from collections.abc import Iterator
from contextlib import contextmanager
from dataclasses import dataclass, field
from typing import Any, Optional, TypeVar
from urllib.parse import quote

import httpx
from pydantic import BaseModel, TypeAdapter, ValidationError

from . import types_gen
from .errors import ApiError as ApiError
from .errors import GetCountsApiError as GetCountsApiError

_ErrorT = TypeVar("_ErrorT", bound=BaseModel)


@dataclass
class TestApiConfig:
    """Client configuration for TestApi."""

    #: Base URL for the API.
    url: str
    #: Client used for every request. Supply your own to add authentication or
    #: any other middleware — an \`\`httpx.Auth\`\` (e.g. a SigV4 signer), an event
    #: hook, a custom transport, timeouts, retries or a proxy all apply, and the
    #: client's own headers and query params are sent alongside each operation's.
    #: A supplied client is never closed by this one, so it can be shared.
    httpx_client: Optional[httpx.Client] = None
    #: Headers added to every request, where the operation sets none itself.
    headers: dict[str, str] = field(default_factory=dict)
    #: By default the client sends a Content-Type header set to the media type
    #: the OpenAPI specification declares for the request. Set this to omit it.
    omit_content_type_header: bool = False


class TestApi:
    """Synchronous API client for TestApi."""

    def __init__(self, config: TestApiConfig) -> None:
        self._config = config
        self._client = config.httpx_client or httpx.Client()
        self._owns_client = config.httpx_client is None
        self._base_url = config.url.rstrip("/")

    def __enter__(self) -> "TestApi":
        return self

    def __exit__(self, *exc: Any) -> None:
        self.close()

    def close(self) -> None:
        if self._owns_client:
            self._client.close()

    def _url(
        self,
        path: str,
        path_params: dict[str, Any],
        path_styles: Optional[dict[str, tuple[str, bool]]] = None,
    ) -> str:
        for key, value in path_params.items():
            style, explode = (path_styles or {}).get(key, ("simple", False))
            values = value if isinstance(value, list) else [value]
            if style == "matrix":
                # RFC 6570 path-style expansion: ;key=a,b (explode: ;key=a;key=b)
                if explode:
                    rendered = "".join(
                        ";" + key + "=" + quote(self._scalar(v), safe="")
                        for v in values
                    )
                else:
                    rendered = (
                        ";"
                        + key
                        + "="
                        + ",".join(quote(self._scalar(v), safe="") for v in values)
                    )
            elif style == "label":
                # RFC 6570 label expansion: .a,b (explode: .a.b)
                rendered = "." + ("." if explode else ",").join(
                    quote(self._scalar(v), safe="") for v in values
                )
            else:
                # RFC 6570 simple expansion: a list renders comma-separated.
                rendered = ",".join(quote(self._scalar(v), safe="") for v in values)
            path = path.replace("{" + key + "}", rendered)
        return self._base_url + path

    def _deep_object(self, key: str, value: Any, out: dict[str, Any]) -> None:
        if isinstance(value, BaseModel):
            value = value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, dict):
            for prop, v in value.items():
                self._deep_object(f"{key}[{prop}]", v, out)
        elif value is not None:
            out[key] = value

    _COLLECTION_DELIMITERS = {"csv": ",", "ssv": " ", "pipes": "|"}

    def _scalar(self, value: Any) -> str:
        # The wire form of a single parameter value: JSON spellings for bools,
        # ISO-8601 for dates, and the model's own wire shape for anything else.
        if isinstance(value, bool):
            return "true" if value else "false"
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        dumped = self._dump(value)
        return dumped if isinstance(dumped, str) else str(dumped)

    def _query(
        self,
        query_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> dict[str, Any]:
        out: dict[str, Any] = {}
        for key, value in query_params.items():
            if value is None:
                continue
            fmt = (collection_formats or {}).get(key)
            if fmt == "deepObject":
                self._deep_object(key, value, out)
            elif isinstance(value, list):
                delimiter = self._COLLECTION_DELIMITERS.get(fmt or "multi")
                if delimiter is None:
                    out[key] = [self._scalar(v) for v in value]
                else:
                    out[key] = delimiter.join(self._scalar(v) for v in value)
            else:
                out[key] = self._scalar(value)
        return out

    def _headers(
        self,
        header_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> list[tuple[str, str]]:
        out: list[tuple[str, str]] = []
        for key, value in header_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "csv")
                delimiter = self._COLLECTION_DELIMITERS.get(fmt)
                if delimiter is None:
                    for item in value:
                        out.append((key, self._scalar(item)))
                else:
                    out.append((key, delimiter.join(self._scalar(v) for v in value)))
            else:
                out.append((key, self._scalar(value)))
        # A config header only applies where the operation didn't set one:
        # httpx comma-joins repeated names, which would corrupt the value.
        operation_headers = {key.lower() for key, _ in out}
        out.extend(
            (key, value)
            for key, value in self._config.headers.items()
            if key.lower() not in operation_headers
        )
        return out

    def _cookies(self, cookie_params: dict[str, Any]) -> dict[str, str]:
        return {k: self._scalar(v) for k, v in cookie_params.items() if v is not None}

    def _dump(self, value: Any) -> Any:
        if value is None:
            return None
        if isinstance(value, BaseModel):
            return value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, (list, tuple)):
            return [self._dump(v) for v in value]
        if isinstance(value, dict):
            return {k: self._dump(v) for k, v in value.items()}
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        return value

    def _send_with_url(self, final_url: str, **kwargs: Any) -> httpx.Response:
        # \`request()\` lets httpx rebuild the query from the client's params,
        # discarding a hand-built one. Building the request first and overriding
        # the URL keeps it, while auth and event hooks still run on send.
        request = self._client.build_request(**kwargs)
        request.url = httpx.URL(final_url)
        return self._client.send(request)

    @contextmanager
    def _stream_with_url(
        self, final_url: str, **kwargs: Any
    ) -> Iterator[httpx.Response]:
        # The streaming counterpart of \`_send_with_url\`: \`stream()\` would rebuild
        # the query from the client's params and percent-encode a hand-built one.
        request = self._client.build_request(**kwargs)
        request.url = httpx.URL(final_url)
        response = self._client.send(request, stream=True)
        try:
            yield response
        finally:
            response.close()

    def _error_payload(self, response: httpx.Response) -> Any:
        # An error body is whatever the server actually sent, which need not be
        # the JSON the spec declares (a proxy's HTML page, say).
        try:
            return response.json()
        except ValueError:
            return response.text

    def _error(self, wrapper: type[_ErrorT], status: int, payload: Any) -> _ErrorT:
        # Coerce to the declared error type, falling back to the raw payload so
        # a body that doesn't match the spec still raises the typed exception.
        try:
            return wrapper.model_validate({"status": status, "error": payload})
        except ValidationError:
            return wrapper.model_construct(status=status, error=payload)

    def get_counts(
        self,
    ) -> types_gen.GetCounts200Response:
        path_params: dict[str, Any] = {}
        query_params: dict[str, Any] = {}
        header_params: dict[str, Any] = {}
        cookie_params: dict[str, Any] = {}
        query_formats: Optional[dict[str, str]] = None
        header_formats: Optional[dict[str, str]] = None
        body = None
        request_kwargs: dict[str, Any] = {}
        _request_url = self._url("/counts", path_params)
        response = self._client.request(
            "GET",
            _request_url,
            params=self._query(query_params, query_formats),
            headers=self._headers(header_params, header_formats),
            **request_kwargs,
        )
        if response.status_code == 200:
            return TypeAdapter(types_gen.GetCounts200Response).validate_python(
                response.json()
            )
        raise GetCountsApiError(response.status_code, None)
"
`;

exports[`openApiPyClientGenerator - arrays > should handle dictionary (additionalProperties) responses > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

from typing import Never

GetCounts200Response = dict[str, int]

GetCountsError = Never
"
`;

exports[`openApiPyClientGenerator - arrays > should handle operation which accepts an array of objects > client_gen.py 1`] = `
""""TestApi — AUTO-GENERATED synchronous client."""

from __future__ import annotations

import datetime
from collections.abc import Iterator
from contextlib import contextmanager
from dataclasses import dataclass, field
from typing import Any, Optional, TypeVar
from urllib.parse import quote

import httpx
from pydantic import BaseModel, TypeAdapter, ValidationError

from . import types_gen
from .errors import ApiError as ApiError
from .errors import CreateUsersApiError as CreateUsersApiError

_ErrorT = TypeVar("_ErrorT", bound=BaseModel)


@dataclass
class TestApiConfig:
    """Client configuration for TestApi."""

    #: Base URL for the API.
    url: str
    #: Client used for every request. Supply your own to add authentication or
    #: any other middleware — an \`\`httpx.Auth\`\` (e.g. a SigV4 signer), an event
    #: hook, a custom transport, timeouts, retries or a proxy all apply, and the
    #: client's own headers and query params are sent alongside each operation's.
    #: A supplied client is never closed by this one, so it can be shared.
    httpx_client: Optional[httpx.Client] = None
    #: Headers added to every request, where the operation sets none itself.
    headers: dict[str, str] = field(default_factory=dict)
    #: By default the client sends a Content-Type header set to the media type
    #: the OpenAPI specification declares for the request. Set this to omit it.
    omit_content_type_header: bool = False


class TestApi:
    """Synchronous API client for TestApi."""

    def __init__(self, config: TestApiConfig) -> None:
        self._config = config
        self._client = config.httpx_client or httpx.Client()
        self._owns_client = config.httpx_client is None
        self._base_url = config.url.rstrip("/")

    def __enter__(self) -> "TestApi":
        return self

    def __exit__(self, *exc: Any) -> None:
        self.close()

    def close(self) -> None:
        if self._owns_client:
            self._client.close()

    def _url(
        self,
        path: str,
        path_params: dict[str, Any],
        path_styles: Optional[dict[str, tuple[str, bool]]] = None,
    ) -> str:
        for key, value in path_params.items():
            style, explode = (path_styles or {}).get(key, ("simple", False))
            values = value if isinstance(value, list) else [value]
            if style == "matrix":
                # RFC 6570 path-style expansion: ;key=a,b (explode: ;key=a;key=b)
                if explode:
                    rendered = "".join(
                        ";" + key + "=" + quote(self._scalar(v), safe="")
                        for v in values
                    )
                else:
                    rendered = (
                        ";"
                        + key
                        + "="
                        + ",".join(quote(self._scalar(v), safe="") for v in values)
                    )
            elif style == "label":
                # RFC 6570 label expansion: .a,b (explode: .a.b)
                rendered = "." + ("." if explode else ",").join(
                    quote(self._scalar(v), safe="") for v in values
                )
            else:
                # RFC 6570 simple expansion: a list renders comma-separated.
                rendered = ",".join(quote(self._scalar(v), safe="") for v in values)
            path = path.replace("{" + key + "}", rendered)
        return self._base_url + path

    def _deep_object(self, key: str, value: Any, out: dict[str, Any]) -> None:
        if isinstance(value, BaseModel):
            value = value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, dict):
            for prop, v in value.items():
                self._deep_object(f"{key}[{prop}]", v, out)
        elif value is not None:
            out[key] = value

    _COLLECTION_DELIMITERS = {"csv": ",", "ssv": " ", "pipes": "|"}

    def _scalar(self, value: Any) -> str:
        # The wire form of a single parameter value: JSON spellings for bools,
        # ISO-8601 for dates, and the model's own wire shape for anything else.
        if isinstance(value, bool):
            return "true" if value else "false"
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        dumped = self._dump(value)
        return dumped if isinstance(dumped, str) else str(dumped)

    def _query(
        self,
        query_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> dict[str, Any]:
        out: dict[str, Any] = {}
        for key, value in query_params.items():
            if value is None:
                continue
            fmt = (collection_formats or {}).get(key)
            if fmt == "deepObject":
                self._deep_object(key, value, out)
            elif isinstance(value, list):
                delimiter = self._COLLECTION_DELIMITERS.get(fmt or "multi")
                if delimiter is None:
                    out[key] = [self._scalar(v) for v in value]
                else:
                    out[key] = delimiter.join(self._scalar(v) for v in value)
            else:
                out[key] = self._scalar(value)
        return out

    def _headers(
        self,
        header_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> list[tuple[str, str]]:
        out: list[tuple[str, str]] = []
        for key, value in header_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "csv")
                delimiter = self._COLLECTION_DELIMITERS.get(fmt)
                if delimiter is None:
                    for item in value:
                        out.append((key, self._scalar(item)))
                else:
                    out.append((key, delimiter.join(self._scalar(v) for v in value)))
            else:
                out.append((key, self._scalar(value)))
        # A config header only applies where the operation didn't set one:
        # httpx comma-joins repeated names, which would corrupt the value.
        operation_headers = {key.lower() for key, _ in out}
        out.extend(
            (key, value)
            for key, value in self._config.headers.items()
            if key.lower() not in operation_headers
        )
        return out

    def _cookies(self, cookie_params: dict[str, Any]) -> dict[str, str]:
        return {k: self._scalar(v) for k, v in cookie_params.items() if v is not None}

    def _dump(self, value: Any) -> Any:
        if value is None:
            return None
        if isinstance(value, BaseModel):
            return value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, (list, tuple)):
            return [self._dump(v) for v in value]
        if isinstance(value, dict):
            return {k: self._dump(v) for k, v in value.items()}
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        return value

    def _send_with_url(self, final_url: str, **kwargs: Any) -> httpx.Response:
        # \`request()\` lets httpx rebuild the query from the client's params,
        # discarding a hand-built one. Building the request first and overriding
        # the URL keeps it, while auth and event hooks still run on send.
        request = self._client.build_request(**kwargs)
        request.url = httpx.URL(final_url)
        return self._client.send(request)

    @contextmanager
    def _stream_with_url(
        self, final_url: str, **kwargs: Any
    ) -> Iterator[httpx.Response]:
        # The streaming counterpart of \`_send_with_url\`: \`stream()\` would rebuild
        # the query from the client's params and percent-encode a hand-built one.
        request = self._client.build_request(**kwargs)
        request.url = httpx.URL(final_url)
        response = self._client.send(request, stream=True)
        try:
            yield response
        finally:
            response.close()

    def _error_payload(self, response: httpx.Response) -> Any:
        # An error body is whatever the server actually sent, which need not be
        # the JSON the spec declares (a proxy's HTML page, say).
        try:
            return response.json()
        except ValueError:
            return response.text

    def _error(self, wrapper: type[_ErrorT], status: int, payload: Any) -> _ErrorT:
        # Coerce to the declared error type, falling back to the raw payload so
        # a body that doesn't match the spec still raises the typed exception.
        try:
            return wrapper.model_validate({"status": status, "error": payload})
        except ValidationError:
            return wrapper.model_construct(status=status, error=payload)

    def create_users(
        self,
        body: list[types_gen.User],
    ) -> list[types_gen.User]:
        path_params: dict[str, Any] = {}
        query_params: dict[str, Any] = {}
        header_params: dict[str, Any] = {}
        cookie_params: dict[str, Any] = {}
        query_formats: Optional[dict[str, str]] = None
        header_formats: Optional[dict[str, str]] = None
        body = self._dump(body)
        request_kwargs: dict[str, Any] = {"json": body}
        if body is not None and not self._config.omit_content_type_header:
            header_params.setdefault("Content-Type", "application/json")
        _request_url = self._url("/create-users", path_params)
        response = self._client.request(
            "POST",
            _request_url,
            params=self._query(query_params, query_formats),
            headers=self._headers(header_params, header_formats),
            **request_kwargs,
        )
        if response.status_code == 200:
            return TypeAdapter(list[types_gen.User]).validate_python(response.json())
        raise CreateUsersApiError(response.status_code, None)
"
`;

exports[`openApiPyClientGenerator - arrays > should handle operation which accepts an array of objects > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

from typing import Never, Optional, TypedDict

from pydantic import BaseModel, ConfigDict


class User(BaseModel):
    model_config = ConfigDict(populate_by_name=True, extra="allow")

    username: str
    email: Optional[str] = None


class CreateUsersRequest(TypedDict):
    body: list["User"]


CreateUsersError = Never
"
`;

exports[`openApiPyClientGenerator - arrays > should handle operation which accepts an array of strings > client_gen.py 1`] = `
""""TestApi — AUTO-GENERATED synchronous client."""

from __future__ import annotations

import datetime
from collections.abc import Iterator
from contextlib import contextmanager
from dataclasses import dataclass, field
from typing import Any, Optional, TypeVar
from urllib.parse import quote

import httpx
from pydantic import BaseModel, ValidationError

from . import types_gen
from .errors import ApiError as ApiError
from .errors import ProcessTagsApiError as ProcessTagsApiError

_ErrorT = TypeVar("_ErrorT", bound=BaseModel)


@dataclass
class TestApiConfig:
    """Client configuration for TestApi."""

    #: Base URL for the API.
    url: str
    #: Client used for every request. Supply your own to add authentication or
    #: any other middleware — an \`\`httpx.Auth\`\` (e.g. a SigV4 signer), an event
    #: hook, a custom transport, timeouts, retries or a proxy all apply, and the
    #: client's own headers and query params are sent alongside each operation's.
    #: A supplied client is never closed by this one, so it can be shared.
    httpx_client: Optional[httpx.Client] = None
    #: Headers added to every request, where the operation sets none itself.
    headers: dict[str, str] = field(default_factory=dict)
    #: By default the client sends a Content-Type header set to the media type
    #: the OpenAPI specification declares for the request. Set this to omit it.
    omit_content_type_header: bool = False


class TestApi:
    """Synchronous API client for TestApi."""

    def __init__(self, config: TestApiConfig) -> None:
        self._config = config
        self._client = config.httpx_client or httpx.Client()
        self._owns_client = config.httpx_client is None
        self._base_url = config.url.rstrip("/")

    def __enter__(self) -> "TestApi":
        return self

    def __exit__(self, *exc: Any) -> None:
        self.close()

    def close(self) -> None:
        if self._owns_client:
            self._client.close()

    def _url(
        self,
        path: str,
        path_params: dict[str, Any],
        path_styles: Optional[dict[str, tuple[str, bool]]] = None,
    ) -> str:
        for key, value in path_params.items():
            style, explode = (path_styles or {}).get(key, ("simple", False))
            values = value if isinstance(value, list) else [value]
            if style == "matrix":
                # RFC 6570 path-style expansion: ;key=a,b (explode: ;key=a;key=b)
                if explode:
                    rendered = "".join(
                        ";" + key + "=" + quote(self._scalar(v), safe="")
                        for v in values
                    )
                else:
                    rendered = (
                        ";"
                        + key
                        + "="
                        + ",".join(quote(self._scalar(v), safe="") for v in values)
                    )
            elif style == "label":
                # RFC 6570 label expansion: .a,b (explode: .a.b)
                rendered = "." + ("." if explode else ",").join(
                    quote(self._scalar(v), safe="") for v in values
                )
            else:
                # RFC 6570 simple expansion: a list renders comma-separated.
                rendered = ",".join(quote(self._scalar(v), safe="") for v in values)
            path = path.replace("{" + key + "}", rendered)
        return self._base_url + path

    def _deep_object(self, key: str, value: Any, out: dict[str, Any]) -> None:
        if isinstance(value, BaseModel):
            value = value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, dict):
            for prop, v in value.items():
                self._deep_object(f"{key}[{prop}]", v, out)
        elif value is not None:
            out[key] = value

    _COLLECTION_DELIMITERS = {"csv": ",", "ssv": " ", "pipes": "|"}

    def _scalar(self, value: Any) -> str:
        # The wire form of a single parameter value: JSON spellings for bools,
        # ISO-8601 for dates, and the model's own wire shape for anything else.
        if isinstance(value, bool):
            return "true" if value else "false"
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        dumped = self._dump(value)
        return dumped if isinstance(dumped, str) else str(dumped)

    def _query(
        self,
        query_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> dict[str, Any]:
        out: dict[str, Any] = {}
        for key, value in query_params.items():
            if value is None:
                continue
            fmt = (collection_formats or {}).get(key)
            if fmt == "deepObject":
                self._deep_object(key, value, out)
            elif isinstance(value, list):
                delimiter = self._COLLECTION_DELIMITERS.get(fmt or "multi")
                if delimiter is None:
                    out[key] = [self._scalar(v) for v in value]
                else:
                    out[key] = delimiter.join(self._scalar(v) for v in value)
            else:
                out[key] = self._scalar(value)
        return out

    def _headers(
        self,
        header_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> list[tuple[str, str]]:
        out: list[tuple[str, str]] = []
        for key, value in header_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "csv")
                delimiter = self._COLLECTION_DELIMITERS.get(fmt)
                if delimiter is None:
                    for item in value:
                        out.append((key, self._scalar(item)))
                else:
                    out.append((key, delimiter.join(self._scalar(v) for v in value)))
            else:
                out.append((key, self._scalar(value)))
        # A config header only applies where the operation didn't set one:
        # httpx comma-joins repeated names, which would corrupt the value.
        operation_headers = {key.lower() for key, _ in out}
        out.extend(
            (key, value)
            for key, value in self._config.headers.items()
            if key.lower() not in operation_headers
        )
        return out

    def _cookies(self, cookie_params: dict[str, Any]) -> dict[str, str]:
        return {k: self._scalar(v) for k, v in cookie_params.items() if v is not None}

    def _dump(self, value: Any) -> Any:
        if value is None:
            return None
        if isinstance(value, BaseModel):
            return value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, (list, tuple)):
            return [self._dump(v) for v in value]
        if isinstance(value, dict):
            return {k: self._dump(v) for k, v in value.items()}
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        return value

    def _send_with_url(self, final_url: str, **kwargs: Any) -> httpx.Response:
        # \`request()\` lets httpx rebuild the query from the client's params,
        # discarding a hand-built one. Building the request first and overriding
        # the URL keeps it, while auth and event hooks still run on send.
        request = self._client.build_request(**kwargs)
        request.url = httpx.URL(final_url)
        return self._client.send(request)

    @contextmanager
    def _stream_with_url(
        self, final_url: str, **kwargs: Any
    ) -> Iterator[httpx.Response]:
        # The streaming counterpart of \`_send_with_url\`: \`stream()\` would rebuild
        # the query from the client's params and percent-encode a hand-built one.
        request = self._client.build_request(**kwargs)
        request.url = httpx.URL(final_url)
        response = self._client.send(request, stream=True)
        try:
            yield response
        finally:
            response.close()

    def _error_payload(self, response: httpx.Response) -> Any:
        # An error body is whatever the server actually sent, which need not be
        # the JSON the spec declares (a proxy's HTML page, say).
        try:
            return response.json()
        except ValueError:
            return response.text

    def _error(self, wrapper: type[_ErrorT], status: int, payload: Any) -> _ErrorT:
        # Coerce to the declared error type, falling back to the raw payload so
        # a body that doesn't match the spec still raises the typed exception.
        try:
            return wrapper.model_validate({"status": status, "error": payload})
        except ValidationError:
            return wrapper.model_construct(status=status, error=payload)

    def process_tags(
        self,
        body: list[str],
    ) -> types_gen.ProcessTags200Response:
        path_params: dict[str, Any] = {}
        query_params: dict[str, Any] = {}
        header_params: dict[str, Any] = {}
        cookie_params: dict[str, Any] = {}
        query_formats: Optional[dict[str, str]] = None
        header_formats: Optional[dict[str, str]] = None
        body = self._dump(body)
        request_kwargs: dict[str, Any] = {"json": body}
        if body is not None and not self._config.omit_content_type_header:
            header_params.setdefault("Content-Type", "application/json")
        _request_url = self._url("/process-tags", path_params)
        response = self._client.request(
            "POST",
            _request_url,
            params=self._query(query_params, query_formats),
            headers=self._headers(header_params, header_formats),
            **request_kwargs,
        )
        if response.status_code == 200:
            return types_gen.ProcessTags200Response.model_validate(response.json())
        raise ProcessTagsApiError(response.status_code, None)
"
`;

exports[`openApiPyClientGenerator - arrays > should handle operation which accepts an array of strings > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

from typing import Never, TypedDict

from pydantic import BaseModel, ConfigDict


class ProcessTags200Response(BaseModel):
    model_config = ConfigDict(populate_by_name=True, extra="allow")

    processed: int


class ProcessTagsRequest(TypedDict):
    body: list[str]


ProcessTagsError = Never
"
`;

exports[`openApiPyClientGenerator - arrays > should handle operation which returns a nested array of strings > client_gen.py 1`] = `
""""TestApi — AUTO-GENERATED synchronous client."""

from __future__ import annotations

import datetime
from collections.abc import Iterator
from contextlib import contextmanager
from dataclasses import dataclass, field
from typing import Any, Optional, TypeVar
from urllib.parse import quote

import httpx
from pydantic import BaseModel, TypeAdapter, ValidationError

from .errors import ApiError as ApiError
from .errors import GetMatrixApiError as GetMatrixApiError

_ErrorT = TypeVar("_ErrorT", bound=BaseModel)


@dataclass
class TestApiConfig:
    """Client configuration for TestApi."""

    #: Base URL for the API.
    url: str
    #: Client used for every request. Supply your own to add authentication or
    #: any other middleware — an \`\`httpx.Auth\`\` (e.g. a SigV4 signer), an event
    #: hook, a custom transport, timeouts, retries or a proxy all apply, and the
    #: client's own headers and query params are sent alongside each operation's.
    #: A supplied client is never closed by this one, so it can be shared.
    httpx_client: Optional[httpx.Client] = None
    #: Headers added to every request, where the operation sets none itself.
    headers: dict[str, str] = field(default_factory=dict)
    #: By default the client sends a Content-Type header set to the media type
    #: the OpenAPI specification declares for the request. Set this to omit it.
    omit_content_type_header: bool = False


class TestApi:
    """Synchronous API client for TestApi."""

    def __init__(self, config: TestApiConfig) -> None:
        self._config = config
        self._client = config.httpx_client or httpx.Client()
        self._owns_client = config.httpx_client is None
        self._base_url = config.url.rstrip("/")

    def __enter__(self) -> "TestApi":
        return self

    def __exit__(self, *exc: Any) -> None:
        self.close()

    def close(self) -> None:
        if self._owns_client:
            self._client.close()

    def _url(
        self,
        path: str,
        path_params: dict[str, Any],
        path_styles: Optional[dict[str, tuple[str, bool]]] = None,
    ) -> str:
        for key, value in path_params.items():
            style, explode = (path_styles or {}).get(key, ("simple", False))
            values = value if isinstance(value, list) else [value]
            if style == "matrix":
                # RFC 6570 path-style expansion: ;key=a,b (explode: ;key=a;key=b)
                if explode:
                    rendered = "".join(
                        ";" + key + "=" + quote(self._scalar(v), safe="")
                        for v in values
                    )
                else:
                    rendered = (
                        ";"
                        + key
                        + "="
                        + ",".join(quote(self._scalar(v), safe="") for v in values)
                    )
            elif style == "label":
                # RFC 6570 label expansion: .a,b (explode: .a.b)
                rendered = "." + ("." if explode else ",").join(
                    quote(self._scalar(v), safe="") for v in values
                )
            else:
                # RFC 6570 simple expansion: a list renders comma-separated.
                rendered = ",".join(quote(self._scalar(v), safe="") for v in values)
            path = path.replace("{" + key + "}", rendered)
        return self._base_url + path

    def _deep_object(self, key: str, value: Any, out: dict[str, Any]) -> None:
        if isinstance(value, BaseModel):
            value = value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, dict):
            for prop, v in value.items():
                self._deep_object(f"{key}[{prop}]", v, out)
        elif value is not None:
            out[key] = value

    _COLLECTION_DELIMITERS = {"csv": ",", "ssv": " ", "pipes": "|"}

    def _scalar(self, value: Any) -> str:
        # The wire form of a single parameter value: JSON spellings for bools,
        # ISO-8601 for dates, and the model's own wire shape for anything else.
        if isinstance(value, bool):
            return "true" if value else "false"
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        dumped = self._dump(value)
        return dumped if isinstance(dumped, str) else str(dumped)

    def _query(
        self,
        query_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> dict[str, Any]:
        out: dict[str, Any] = {}
        for key, value in query_params.items():
            if value is None:
                continue
            fmt = (collection_formats or {}).get(key)
            if fmt == "deepObject":
                self._deep_object(key, value, out)
            elif isinstance(value, list):
                delimiter = self._COLLECTION_DELIMITERS.get(fmt or "multi")
                if delimiter is None:
                    out[key] = [self._scalar(v) for v in value]
                else:
                    out[key] = delimiter.join(self._scalar(v) for v in value)
            else:
                out[key] = self._scalar(value)
        return out

    def _headers(
        self,
        header_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> list[tuple[str, str]]:
        out: list[tuple[str, str]] = []
        for key, value in header_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "csv")
                delimiter = self._COLLECTION_DELIMITERS.get(fmt)
                if delimiter is None:
                    for item in value:
                        out.append((key, self._scalar(item)))
                else:
                    out.append((key, delimiter.join(self._scalar(v) for v in value)))
            else:
                out.append((key, self._scalar(value)))
        # A config header only applies where the operation didn't set one:
        # httpx comma-joins repeated names, which would corrupt the value.
        operation_headers = {key.lower() for key, _ in out}
        out.extend(
            (key, value)
            for key, value in self._config.headers.items()
            if key.lower() not in operation_headers
        )
        return out

    def _cookies(self, cookie_params: dict[str, Any]) -> dict[str, str]:
        return {k: self._scalar(v) for k, v in cookie_params.items() if v is not None}

    def _dump(self, value: Any) -> Any:
        if value is None:
            return None
        if isinstance(value, BaseModel):
            return value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, (list, tuple)):
            return [self._dump(v) for v in value]
        if isinstance(value, dict):
            return {k: self._dump(v) for k, v in value.items()}
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        return value

    def _send_with_url(self, final_url: str, **kwargs: Any) -> httpx.Response:
        # \`request()\` lets httpx rebuild the query from the client's params,
        # discarding a hand-built one. Building the request first and overriding
        # the URL keeps it, while auth and event hooks still run on send.
        request = self._client.build_request(**kwargs)
        request.url = httpx.URL(final_url)
        return self._client.send(request)

    @contextmanager
    def _stream_with_url(
        self, final_url: str, **kwargs: Any
    ) -> Iterator[httpx.Response]:
        # The streaming counterpart of \`_send_with_url\`: \`stream()\` would rebuild
        # the query from the client's params and percent-encode a hand-built one.
        request = self._client.build_request(**kwargs)
        request.url = httpx.URL(final_url)
        response = self._client.send(request, stream=True)
        try:
            yield response
        finally:
            response.close()

    def _error_payload(self, response: httpx.Response) -> Any:
        # An error body is whatever the server actually sent, which need not be
        # the JSON the spec declares (a proxy's HTML page, say).
        try:
            return response.json()
        except ValueError:
            return response.text

    def _error(self, wrapper: type[_ErrorT], status: int, payload: Any) -> _ErrorT:
        # Coerce to the declared error type, falling back to the raw payload so
        # a body that doesn't match the spec still raises the typed exception.
        try:
            return wrapper.model_validate({"status": status, "error": payload})
        except ValidationError:
            return wrapper.model_construct(status=status, error=payload)

    def get_matrix(
        self,
    ) -> list[list[str]]:
        path_params: dict[str, Any] = {}
        query_params: dict[str, Any] = {}
        header_params: dict[str, Any] = {}
        cookie_params: dict[str, Any] = {}
        query_formats: Optional[dict[str, str]] = None
        header_formats: Optional[dict[str, str]] = None
        body = None
        request_kwargs: dict[str, Any] = {}
        _request_url = self._url("/matrix", path_params)
        response = self._client.request(
            "GET",
            _request_url,
            params=self._query(query_params, query_formats),
            headers=self._headers(header_params, header_formats),
            **request_kwargs,
        )
        if response.status_code == 200:
            return TypeAdapter(list[list[str]]).validate_python(response.json())
        raise GetMatrixApiError(response.status_code, None)
"
`;

exports[`openApiPyClientGenerator - arrays > should handle operation which returns a nested array of strings > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

from typing import Never

GetMatrixError = Never
"
`;

exports[`openApiPyClientGenerator - arrays > should handle operation which returns an array of objects > client_gen.py 1`] = `
""""TestApi — AUTO-GENERATED synchronous client."""

from __future__ import annotations

import datetime
from collections.abc import Iterator
from contextlib import contextmanager
from dataclasses import dataclass, field
from typing import Any, Optional, TypeVar
from urllib.parse import quote

import httpx
from pydantic import BaseModel, TypeAdapter, ValidationError

from . import types_gen
from .errors import ApiError as ApiError
from .errors import ListUsersApiError as ListUsersApiError

_ErrorT = TypeVar("_ErrorT", bound=BaseModel)


@dataclass
class TestApiConfig:
    """Client configuration for TestApi."""

    #: Base URL for the API.
    url: str
    #: Client used for every request. Supply your own to add authentication or
    #: any other middleware — an \`\`httpx.Auth\`\` (e.g. a SigV4 signer), an event
    #: hook, a custom transport, timeouts, retries or a proxy all apply, and the
    #: client's own headers and query params are sent alongside each operation's.
    #: A supplied client is never closed by this one, so it can be shared.
    httpx_client: Optional[httpx.Client] = None
    #: Headers added to every request, where the operation sets none itself.
    headers: dict[str, str] = field(default_factory=dict)
    #: By default the client sends a Content-Type header set to the media type
    #: the OpenAPI specification declares for the request. Set this to omit it.
    omit_content_type_header: bool = False


class TestApi:
    """Synchronous API client for TestApi."""

    def __init__(self, config: TestApiConfig) -> None:
        self._config = config
        self._client = config.httpx_client or httpx.Client()
        self._owns_client = config.httpx_client is None
        self._base_url = config.url.rstrip("/")

    def __enter__(self) -> "TestApi":
        return self

    def __exit__(self, *exc: Any) -> None:
        self.close()

    def close(self) -> None:
        if self._owns_client:
            self._client.close()

    def _url(
        self,
        path: str,
        path_params: dict[str, Any],
        path_styles: Optional[dict[str, tuple[str, bool]]] = None,
    ) -> str:
        for key, value in path_params.items():
            style, explode = (path_styles or {}).get(key, ("simple", False))
            values = value if isinstance(value, list) else [value]
            if style == "matrix":
                # RFC 6570 path-style expansion: ;key=a,b (explode: ;key=a;key=b)
                if explode:
                    rendered = "".join(
                        ";" + key + "=" + quote(self._scalar(v), safe="")
                        for v in values
                    )
                else:
                    rendered = (
                        ";"
                        + key
                        + "="
                        + ",".join(quote(self._scalar(v), safe="") for v in values)
                    )
            elif style == "label":
                # RFC 6570 label expansion: .a,b (explode: .a.b)
                rendered = "." + ("." if explode else ",").join(
                    quote(self._scalar(v), safe="") for v in values
                )
            else:
                # RFC 6570 simple expansion: a list renders comma-separated.
                rendered = ",".join(quote(self._scalar(v), safe="") for v in values)
            path = path.replace("{" + key + "}", rendered)
        return self._base_url + path

    def _deep_object(self, key: str, value: Any, out: dict[str, Any]) -> None:
        if isinstance(value, BaseModel):
            value = value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, dict):
            for prop, v in value.items():
                self._deep_object(f"{key}[{prop}]", v, out)
        elif value is not None:
            out[key] = value

    _COLLECTION_DELIMITERS = {"csv": ",", "ssv": " ", "pipes": "|"}

    def _scalar(self, value: Any) -> str:
        # The wire form of a single parameter value: JSON spellings for bools,
        # ISO-8601 for dates, and the model's own wire shape for anything else.
        if isinstance(value, bool):
            return "true" if value else "false"
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        dumped = self._dump(value)
        return dumped if isinstance(dumped, str) else str(dumped)

    def _query(
        self,
        query_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> dict[str, Any]:
        out: dict[str, Any] = {}
        for key, value in query_params.items():
            if value is None:
                continue
            fmt = (collection_formats or {}).get(key)
            if fmt == "deepObject":
                self._deep_object(key, value, out)
            elif isinstance(value, list):
                delimiter = self._COLLECTION_DELIMITERS.get(fmt or "multi")
                if delimiter is None:
                    out[key] = [self._scalar(v) for v in value]
                else:
                    out[key] = delimiter.join(self._scalar(v) for v in value)
            else:
                out[key] = self._scalar(value)
        return out

    def _headers(
        self,
        header_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> list[tuple[str, str]]:
        out: list[tuple[str, str]] = []
        for key, value in header_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "csv")
                delimiter = self._COLLECTION_DELIMITERS.get(fmt)
                if delimiter is None:
                    for item in value:
                        out.append((key, self._scalar(item)))
                else:
                    out.append((key, delimiter.join(self._scalar(v) for v in value)))
            else:
                out.append((key, self._scalar(value)))
        # A config header only applies where the operation didn't set one:
        # httpx comma-joins repeated names, which would corrupt the value.
        operation_headers = {key.lower() for key, _ in out}
        out.extend(
            (key, value)
            for key, value in self._config.headers.items()
            if key.lower() not in operation_headers
        )
        return out

    def _cookies(self, cookie_params: dict[str, Any]) -> dict[str, str]:
        return {k: self._scalar(v) for k, v in cookie_params.items() if v is not None}

    def _dump(self, value: Any) -> Any:
        if value is None:
            return None
        if isinstance(value, BaseModel):
            return value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, (list, tuple)):
            return [self._dump(v) for v in value]
        if isinstance(value, dict):
            return {k: self._dump(v) for k, v in value.items()}
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        return value

    def _send_with_url(self, final_url: str, **kwargs: Any) -> httpx.Response:
        # \`request()\` lets httpx rebuild the query from the client's params,
        # discarding a hand-built one. Building the request first and overriding
        # the URL keeps it, while auth and event hooks still run on send.
        request = self._client.build_request(**kwargs)
        request.url = httpx.URL(final_url)
        return self._client.send(request)

    @contextmanager
    def _stream_with_url(
        self, final_url: str, **kwargs: Any
    ) -> Iterator[httpx.Response]:
        # The streaming counterpart of \`_send_with_url\`: \`stream()\` would rebuild
        # the query from the client's params and percent-encode a hand-built one.
        request = self._client.build_request(**kwargs)
        request.url = httpx.URL(final_url)
        response = self._client.send(request, stream=True)
        try:
            yield response
        finally:
            response.close()

    def _error_payload(self, response: httpx.Response) -> Any:
        # An error body is whatever the server actually sent, which need not be
        # the JSON the spec declares (a proxy's HTML page, say).
        try:
            return response.json()
        except ValueError:
            return response.text

    def _error(self, wrapper: type[_ErrorT], status: int, payload: Any) -> _ErrorT:
        # Coerce to the declared error type, falling back to the raw payload so
        # a body that doesn't match the spec still raises the typed exception.
        try:
            return wrapper.model_validate({"status": status, "error": payload})
        except ValidationError:
            return wrapper.model_construct(status=status, error=payload)

    def list_users(
        self,
    ) -> list[types_gen.User]:
        path_params: dict[str, Any] = {}
        query_params: dict[str, Any] = {}
        header_params: dict[str, Any] = {}
        cookie_params: dict[str, Any] = {}
        query_formats: Optional[dict[str, str]] = None
        header_formats: Optional[dict[str, str]] = None
        body = None
        request_kwargs: dict[str, Any] = {}
        _request_url = self._url("/users", path_params)
        response = self._client.request(
            "GET",
            _request_url,
            params=self._query(query_params, query_formats),
            headers=self._headers(header_params, header_formats),
            **request_kwargs,
        )
        if response.status_code == 200:
            return TypeAdapter(list[types_gen.User]).validate_python(response.json())
        raise ListUsersApiError(response.status_code, None)
"
`;

exports[`openApiPyClientGenerator - arrays > should handle operation which returns an array of objects > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

from typing import Never

from pydantic import BaseModel, ConfigDict


class User(BaseModel):
    model_config = ConfigDict(populate_by_name=True, extra="allow")

    id: int


ListUsersError = Never
"
`;
